# Simple-Raytracing-Framework

./: CMakeLists.txt  README.md
Extensions/: CMakeLists.txt
Extensions/GoonMath/Includes/gm/: vectorial.h
SRFramework/: CMakeLists.txt
SRFramework/Includes/: BSP.h  KDTree.h  Polygon.h
SRFramework/Sources/: main.cpp
Scripts/: SRFramework-Performance.txt  azure_pipelines_macos.yml  azure_pipelines_vs2017.yml  azure_pipelines_vs2019.yml  build_cl.sh  travis_ci_linux.sh
